refactor(modules): split codecs into dedicated subprojects
Move codec responsibilities out of core and war into a new codecs
aggregator with two focused modules:

- proximo-pitido-codecs-input: PCM decoders and channel mixers
  (including OggOpusPcmDecoder and LibsoxrChannelMixer)
- proximo-pitido-codecs-sip: RTP codec contracts and implementations
  (RtpCodec, PcmaRtpCodec, PcmuRtpCodec, G722RtpCodec)

Key changes:

- Add codecs/pom.xml with input and sip subprojects.
- Move former core.media classes into codecs.input package/module.
- Move former war RTP codec classes into codecs.sip package/module.
- Update war imports and dependencies to consume codecs modules.
- Keep war.media focused on call-session orchestration
  (SdpNegotiator, CallMedia, RtpAudioPlayer).
- Remove media exports/dependencies from core module-info and pom.
- Switch Liberty native access from ALL-UNNAMED to the named module:
  --enable-native-access=de.bmarwell.proximo.pitido.codecs.input.

This improves module boundaries, supports clearer ownership,
enables named native-access scoping, and keeps the architecture ready
for parallel module builds.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>