@@ -1,24 +1,17 @@
 /**
  * Provider-agnostic core logic for Próximo Pitido.
  *
- * <p>This module contains audio decoding, channel mixing, SIP digest authentication,
- * SRV DNS resolution, and local host detection.
+ * <p>This module contains provider-agnostic SIP support logic such as digest authentication,
+ * SRV DNS resolution, local host detection, and language selection utilities.
  * It has no dependency on the SIP servlet container; only pure-Java and CDI APIs are used.
  *
  * <p>{@link de.bmarwell.proximo.pitido.core.LanguageSelector} exposes
  * {@link de.bmarwell.proximo.pitido.spi.LanguageFactory} in its public signatures,
  * so the SPI module is re-exported transitively.
  *
- * <h2>Native access</h2>
- * {@link de.bmarwell.proximo.pitido.core.media.OggOpusPcmDecoder} uses the Foreign
- * Function and Memory (FFM) API ({@code java.lang.foreign}) to call {@code libopus.so.0}
- * directly for Opus decoding.
- * {@link de.bmarwell.proximo.pitido.core.media.LibsoxrChannelMixer} uses the FFM API
- * to probe for {@code libsoxr.so.0} at startup.
- * At runtime the JVM must be started with
- * {@code --enable-native-access=de.bmarwell.proximo.pitido.core}
- * (or {@code ALL-UNNAMED} when the module system is bypassed by the container).
- * In Liberty this is configured in {@code war/src/main/liberty/config/jvm.options}.
+ * <p>Codec and decoding implementations live in dedicated modules:
+ * {@code de.bmarwell.proximo.pitido.codecs.input} and
+ * {@code de.bmarwell.proximo.pitido.codecs.sip}.
  */
 module de.bmarwell.proximo.pitido.core {
     // Internal project modules
@@ -33,23 +26,16 @@ module de.bmarwell.proximo.pitido.core {
 
     // JDK platform modules
     requires java.naming; // javax.naming.* — JNDI SRV DNS lookup (package-private use only)
-    requires java.desktop; // javax.sound.sampled.* — WAV decoding
-
-    // Third-party compile dependencies
-    // Transitive because MediaType appears in the exported PcmDecoder.supports() signature.
-    requires transitive org.apache.tika.core;
 
     // MicroProfile Config — provided by Liberty; annotation-only use (@ConfigProperty)
     requires static microprofile.config.api;
 
     // Exported packages — used by the WAR and language modules
     exports de.bmarwell.proximo.pitido.core;
-    exports de.bmarwell.proximo.pitido.core.media;
     exports de.bmarwell.proximo.pitido.core.sip;
 
     // Open CDI bean packages for runtime reflection by the Liberty CDI container.
     // Unqualified because Liberty's CDI implementation runs in the unnamed module
     // (OSGi classloader) and a qualified "opens … to" cannot name it.
-    opens de.bmarwell.proximo.pitido.core.media;
     opens de.bmarwell.proximo.pitido.core.sip;
 }
